fix language box issues, enable horizontal scroll

--- a/src/css/text.scss
+++ b/src/css/text.scss
@@ -131,6 +131,9 @@ $code-purple: #4A148C;
 
   pre {
 
+    overflow-x: auto;
+    width: calc(100% + $grid * 4);
+
     font-size: 0.8em;
 
     background-color: #eee;
@@ -140,11 +143,13 @@ $code-purple: #4A148C;
     line-height: 140%;
 
     @media (max-width: 800px) {
-      padding: $grid * 2 $grid * 2;
+      padding: $grid * 2 $grid * 4;
     }
     
     @media (max-width: 600px) {
+      padding: $grid * 2 $grid * 2;
       margin: $grid * 2 (-$grid * 2) !important;
+      width: calc(100% + $grid * 2);
     }
     
     code {
@@ -164,31 +169,22 @@ $code-purple: #4A148C;
     font-family: 'Roboto Mono', monospace;
     font-size: 0.8em;
 
-    margin: $grid * 2 0;
-    float: right;
-    position: relative;
-    top: $grid * 1 + 2px;
+    padding: $grid 0;
+    margin-bottom: -$grid * 3;
+    margin-top: $grid * 3;
 
-    .file {
-      color: rgba(black, 0.4);
-      margin-right: $grid;
+    margin-left: $grid * 2;
+
+    @media (max-width: 800px) {
+      margin-left: 0;
     }
     
     .language {
       font-weight: bold;
     }
 
-    @media (max-width: 800px) {
-      float: none;
-      position: static;
-      margin-bottom: -$grid * 2;
-      margin-top: $grid * 3;
-
-      .language {
-        float: left;
-        margin-right: $grid;
-      }
-      
+    .file {
+      color: rgba(black, 0.4);
     }
     
   }
